# openapi_to_mcp

./: .coverage  README.md  pyproject.toml  requirements.txt  setup.py
openapi_to_openai_functions/: __init__.py  converter.py  exceptions.py
openapi_to_openai_functions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/openapi_to_mcp/: __init__.py  cli.py  converter.py  dereferencer.py  models.py
tests/: __init__.py  test_converter.py  test_dereferencer.py
tests/fixtures/circular/: expected.yaml  input.yaml
tests/fixtures/petstore/: expected.yaml  input.yaml
